examples/invalid-sarif-version-not-a-string.sarif
{ "version" : 42 } // { dg-error "expected sarifLog.version to be a string \\\[SARIF v2.1.0 ยง3.13.2\\\]" }

/* { dg-begin-multiline-output "" }
    1 | { "version" : 42 }
      |               ^~
   { dg-end-multiline-output "" } */
